S3:EOS-19591 Put the confstore keys in right hirarchy and integrate with CI-CD
Flat heirarchy keys for provisioner.

Signed-off-by: Deepak Mahale <deepak.mahale@seagate.com>

--- a/scripts/provisioning/s3_prov_config.yaml
+++ b/scripts/provisioning/s3_prov_config.yaml
@@ -49,8 +49,8 @@ INIT:
 # Inheritance hierarchy ends here.
 
 TEST:
-  CONFSTORE_LDAPADMIN_USER_KEY: "cortx>software>openldap>sgiam>user"
-  CONFSTORE_LDAPADMIN_PASSWD_KEY: "cortx>software>openldap>sgiam>secret"
+  CONFSTORE_LDAPADMIN_USER_KEY: "openldapiamuser"
+  CONFSTORE_LDAPADMIN_PASSWD_KEY: "openldapiamsecret"
   CONFSTORE_ENDPOINT_KEY: "endpoint_fqdn"
 RESET:
   CONFSTORE_LDAPADMIN_USER_KEY: "cortx>software>openldap>sgiam>user"
